Fix layout issues with headers

--- a/app/src/components/Layout.sass
+++ b/app/src/components/Layout.sass
@@ -93,7 +93,7 @@ body
         margin-bottom: 20px
 
     h6.subtitle
-        margin-top: -25px
+        margin-top: -5px
 
     .location-map
         width: 100%
